--- a/user/coletafront/src/assets/css/custom.css
+++ b/user/coletafront/src/assets/css/custom.css
@@ -1,5 +1,5 @@
 
-@import url("https://fonts.googleapis.com/css2?family=MontSerrat:weight@400;600;700;800&family=Roboto+Condensed:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
 
 @import "bigSlider.css";
 @import "button.css";
@@ -11,5 +11,5 @@
 @import "typo.css";
 
 body{
-    background-color: aquamarine;
+    background-color: #fff;
 }
