--- a/user/coletafront/src/assets/css/custom.css
+++ b/user/coletafront/src/assets/css/custom.css
@@ -5,7 +5,7 @@
 @import "button.css";
 @import "card.css";
 @import "footer.css";
-@import "megaMenu.css";
+@import "MegaMenu.css";
 @import "navMenuDesktop.css";
 @import "navMenuMobile.css";
 @import "typo.css";
