--- a/user/coletafront/src/assets/css/megaMenu.css
+++ b/user/coletafront/src/assets/css/megaMenu.css
@@ -43,8 +43,8 @@ box-shadow: 0 0 2px 0 rgba(57,78,234,0.1)
     font-family: 'Roboto Condensed', sans-serif !important;
     font-weight: 300 !important;
     height: 380px;
-    overflow: auto;
-    overflow-y: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     scrollbar-width: thin;
     scrollbar-color: #e9e9e9 #ffffff;
 }
@@ -62,7 +62,7 @@ box-shadow: 0 0 2px 0 rgba(57,78,234,0.1)
 }
 
 .accordionMenuDiv::-webkit-scrollbar-track{
-    background: #f4f4f4 !important;
+    background: #F4F4F4 !important;
 }
 
 .accordionMenuDivInside{
@@ -81,3 +81,4 @@ box-shadow: 0 0 2px 0 rgba(57,78,234,0.1)
 .accordionItem:hover{
     text-decoration: none;
 }
+
