--- a/user/coletafront/src/assets/css/custom.css
+++ b/user/coletafront/src/assets/css/custom.css
@@ -9,7 +9,10 @@
 @import "navMenuDesktop.css";
 @import "navMenuMobile.css";
 @import "typo.css";
+@import "onboard.css";
+@import "common.css";
+@import "megaMenuMobile.css";
 
 body{
-    background-color: #fff;
+    background-color: #ffffff;
 }
